--- a/index.html
+++ b/index.html
@@ -210,8 +210,31 @@
                                                     </li>
                                                     <!-- a work -->
                                                     <li>
+                                                        <h3 class="line-title">Developer - ??</h3>
+                                                        <span>2/2022 - Current</span>
+                                                        <p class="little-text">
+                                                            Started as an intern and later participated in the development of a project: Building a project management tool.
+                                                        </p><br/>
+                                                        <p class="little-text">
+                                                            Participated in building the front-end interface for the project.
+                                                        </p><br/>
+                                                        <p class="little-text">
+                                                            Create and call APIs for specific functions such as adding new items, editing, deleting, updating,...
+                                                        </p><br/>
+                                                        <p class="little-text">
+                                                            Create functions such as CRUD, Statistics, User Management,...
+                                                        </p>
+                                                        <p class="little-text tag-group">
+                                                            <span class="tags">Technologies used</span>
+                                                            <span class="tags">Laravel</span>
+                                                            <span class="tags">Vue</span>
+                                                            <span class="tags">MySQL</span>
+                                                        </p>
+                                                    </li>
+                                                    <!-- a work -->
+                                                    <li>
                                                         <h3 class="line-title">Student - Suntech</h3>
-                                                        <span>11/2022 - Current</span>
+                                                        <span>7/2021-1/2022</span>
 
                                                         <p class="little-text">
                                                             Building web interfaces from files design.
@@ -249,7 +272,7 @@
                                                             <span class="tags">Technologies used</span>
                                                             <span class="tags">PHP</span>
                                                             <span class="tags">MySQL</span>
-                                                            <span class="tags">Laravel Framework</span>
+                                                            <span class="tags">Laravel</span>
                                                             <span class="tags">Javascript</span>
                                                             <span class="tags">HTML/CSS</span>
                                                         </p>
