--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                                                     </li>
                                                     <!-- a work -->
                                                     <li>
-                                                        <h3 class="line-title">Developer - ??</h3>
-                                                        <span>2/2022 - Current</span>
+                                                        <h3 class="line-title">Developer - Lotus Developer</h3>
+                                                        <span>09/2021 - Current</span>
                                                         <p class="little-text">
                                                             Started as an intern and later participated in the development of a project: Building a project management tool.
                                                         </p><br/>
@@ -233,8 +233,27 @@
                                                     </li>
                                                     <!-- a work -->
                                                     <li>
+                                                        <h3 class="line-title">Intern - CodeGym</h3>
+                                                        <span>1/2021 - 3/2021</span>
+                                                        <p class="little-text">
+                                                            During my internship, I had the opportunity to work on and develop projects using the MVC model
+                                                            <br/><br/>I also learned and used Laravel and Bootstrap Frameworks in real-world projects, which helped me gain more experience in web development using these technologies.
+                                                            <br/><br/>Throughout my internship, I have enhanced my programming skills and teamwork abilities, and learned a lot of new things in the field of web development.
+                                                        </p>
+
+                                                        <p class="little-text tag-group">
+                                                            <span class="tags">Technologies used</span>
+                                                            <span class="tags">PHP</span>
+                                                            <span class="tags">MySQL</span>
+                                                            <span class="tags">Laravel</span>
+                                                            <span class="tags">Javascript</span>
+                                                            <span class="tags">HTML/CSS</span>
+                                                        </p>
+                                                    </li>
+                                                     <!-- a work -->
+                                                     <li>
                                                         <h3 class="line-title">Student - Suntech</h3>
-                                                        <span>7/2021-1/2022</span>
+                                                        <span>07/2020 - 01/2021</span>
 
                                                         <p class="little-text">
                                                             Building web interfaces from files design.
@@ -258,25 +277,6 @@
                                                             <span class="tags">HTML/CSS</span>
                                                         </p>
                                                     </li>
-                                                    <!-- a work -->
-                                                    <li>
-                                                        <h3 class="line-title">Intern - CodeGym</h3>
-                                                        <span>1/2021 - 3/2021</span>
-                                                        <p class="little-text">
-                                                            During my internship, I had the opportunity to work on and develop projects using the MVC model
-                                                            <br/><br/>I also learned and used Laravel and Bootstrap Frameworks in real-world projects, which helped me gain more experience in web development using these technologies.
-                                                            <br/><br/>Throughout my internship, I have enhanced my programming skills and teamwork abilities, and learned a lot of new things in the field of web development.
-                                                        </p>
-                                                        
-                                                        <p class="little-text tag-group">
-                                                            <span class="tags">Technologies used</span>
-                                                            <span class="tags">PHP</span>
-                                                            <span class="tags">MySQL</span>
-                                                            <span class="tags">Laravel</span>
-                                                            <span class="tags">Javascript</span>
-                                                            <span class="tags">HTML/CSS</span>
-                                                        </p>
-                                                    </li>
                                                 </ul>
                                             </div>
 
@@ -289,7 +289,7 @@
                                                     <!-- a work -->
                                                     <li>
                                                         <h3 class="line-title">HANOI VOCATIONAL COLLEGE OF TECHNOLOGY</h3>
-                                                        <span>2018 - 2022</span>
+                                                        <span>2018 - 2021</span>
                                                         <p class="little-text">
                                                             During my study at school, I learned fundamental knowledge about programming and studied some web programming languages such as html, css, js, and php.
                                                         </p><br>
