--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                                     </li>
                                                      <!-- a work -->
                                                      <li>
-                                                        <h3 class="line-title">Student - Suntech</h3>
+                                                        <h3 class="line-title">Student - Suntech Academy</h3>
                                                         <span>07/2020 - 01/2021</span>
 
                                                         <p class="little-text">
