--- a/index.html
+++ b/index.html
@@ -254,19 +254,15 @@
                                                      <li>
                                                         <h3 class="line-title">Student - Suntech Academy</h3>
                                                         <span>07/2020 - 01/2021</span>
-
                                                         <p class="little-text">
-                                                            Building web interfaces from files design.
+                                                            Joined class "Web Fullstack" at SUNTECH. I learn about Javascript, Vue, PHP, MYSQL and Laravel Framework
                                                         </p><br/>
                                                         <p class="little-text">
-                                                            Getting familiar with and using Trello can help manage online projects by tracking tasks and work progress.
+                                                            After finished this course, I understood these concepts in Vue and Laravel Framrwork. I can build website with Laravel and Vue. And I confident to build web Single Page Application.
                                                         </p><br/>
                                                         <p class="little-text">
-                                                           Participating in real-world projects using Laravel Framework.
+                                                            I Finished final project of course and receive appreciate from teacher
                                                         </p><br/>
-                                                        <p class="little-text">
-                                                            Learn about Vue.js and apply it in a real-world project.
-                                                         </p><br/>
                                                         <p class="little-text tag-group">
                                                             <span class="tags">Technologies used</span>
                                                             <span class="tags">PHP</span>
