--- a/index.html
+++ b/index.html
@@ -213,17 +213,11 @@
                                                         <h3 class="line-title">Developer - Lotus Developer</h3>
                                                         <span>09/2021 - Current</span>
                                                         <p class="little-text">
-                                                            Started as an intern and later participated in the development of a project: Building a project management tool.
+                                                            I joined Lotus Group with Fresher, in this time I do internal project "Company's timekeeping system" with Laravel Vue. After 2 months became offical staff.
                                                         </p><br/>
                                                         <p class="little-text">
-                                                            Participated in building the front-end interface for the project.
+                                                            I have join a customer's project with position developer. I do the tasks from leader and became a partion of team to build and develop this project. I have learned alot of things from this project, like as Laravel and Vue skill, task management and management time,...
                                                         </p><br/>
-                                                        <p class="little-text">
-                                                            Create and call APIs for specific functions such as adding new items, editing, deleting, updating,...
-                                                        </p><br/>
-                                                        <p class="little-text">
-                                                            Create functions such as CRUD, Statistics, User Management,...
-                                                        </p>
                                                         <p class="little-text tag-group">
                                                             <span class="tags">Technologies used</span>
                                                             <span class="tags">Laravel</span>
