--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                                     </li>
                                                     <!-- a work -->
                                                     <li>
-                                                        <h3 class="line-title">Developer - Lotus Developer</h3>
+                                                        <h3 class="line-title">Developer - LTS Group</h3>
                                                         <span>09/2021 - Current</span>
                                                         <p class="little-text">
                                                             I joined Lotus Group with Fresher, in this time I do internal project "Company's timekeeping system" with Laravel Vue. After 2 months became offical staff.
