--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
                                                             <span class="tags">Laravel</span>
                                                             <span class="tags">Vue</span>
                                                             <span class="tags">MySQL</span>
+                                                            <span class="tags">Bootstrap</span>
                                                         </p>
                                                     </li>
                                                     <!-- a work -->
@@ -234,7 +235,6 @@
                                                             <br/><br/>I also learned and used Laravel and Bootstrap Frameworks in real-world projects, which helped me gain more experience in web development using these technologies.
                                                             <br/><br/>Throughout my internship, I have enhanced my programming skills and teamwork abilities, and learned a lot of new things in the field of web development.
                                                         </p>
-
                                                         <p class="little-text tag-group">
                                                             <span class="tags">Technologies used</span>
                                                             <span class="tags">PHP</span>
@@ -242,6 +242,7 @@
                                                             <span class="tags">Laravel</span>
                                                             <span class="tags">Javascript</span>
                                                             <span class="tags">HTML/CSS</span>
+                                                            <span class="tags">XML</span>
                                                         </p>
                                                     </li>
                                                      <!-- a work -->
